my-app/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: argocd-myapp
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        editor: vscode
    spec:
      containers:
      - name: nginx
        image: kaspernielsenliva/argocd-playground:0.1.0
        ports:
          containerPort: 80
