my-app/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-playground-myapp
  namespace: argocd-myapp
  
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
